--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,16 +14,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.7'  # Match your project's Python version
-
-      - name: Install dependencies 
+      - name: Install Python 3.7
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          sudo apt-get update
+          sudo apt-get install -y python3.7 python3.7-venv python3.7-dev
+          python3.7 -m ensurepip --upgrade
+          python3.7 -m pip install --upgrade pip
+
+      - name: Install dependencies
+        run: |
+          python3.7 -m pip install flake8
+          if [ -f requirements.txt ]; then python3.7 -m pip install -r requirements.txt; fi
 
       - name: Run Linter on scripts/
-        run: flake8 scripts/
+        run: python3.7 -m flake8 scripts/
