--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,17 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install Python 3.7
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python3.7 python3.7-venv python3.7-dev
-          python3.7 -m ensurepip --upgrade
-          python3.7 -m pip install --upgrade pip
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.8'  # Using Python 3.8 for linting
 
       - name: Install dependencies
         run: |
-          python3.7 -m pip install flake8
-          if [ -f requirements.txt ]; then python3.7 -m pip install -r requirements.txt; fi
+          python -m pip install --upgrade pip
+          pip install flake8
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run Linter on scripts/
-        run: python3.7 -m flake8 scripts/
+        run: flake8 scripts/
