--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint Python Code
+name: Lint and Format Python Code
 
 on:
   push:
@@ -14,16 +14,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.8'  # Using Python 3.8 for linting
+          python-version: '3.8'  # Using 3.8 for the linter, while keeping scripts in 3.7
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install black isort flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run Linter on scripts/
+      - name: Run Isort (Organize Imports)
+        run: isort scripts/
+
+      - name: Run Black (Autoformat Code)
+        run: black scripts/
+
+      - name: Run Flake8 (Linting)
         run: flake8 scripts/
