--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,10 +40,8 @@ jobs:
             echo "No formatting changes needed."
           else
             git commit -m "Autoformatted code with Black and Isort [skip ci]"
-            git push
+            git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/alexmc808/pe_predictions_app.git HEAD:main
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Run Flake8 (Linting)
         run: flake8 scripts/
