--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -37,19 +37,19 @@ jobs:
         run: |
           echo "Checking if GH_PAT is set..."
           if [[ -z "${GH_PAT}" ]]; then
-            echo "❌ GH_PAT is NOT set! Ensure you added it to GitHub Secrets."
+            echo "GH_PAT is NOT set! Ensure you added it to GitHub Secrets."
             exit 1
           else
-            echo "✅ GH_PAT is set!"
+            echo "GH_PAT is set!"
           fi
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
 
-      # Commit and push changes if autoformatting was applied
       - name: Commit and Push Changes (if needed)
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
           git add scripts/
           if git diff --cached --quiet; then
             echo "No formatting changes needed."
