--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: "3.8"  # Linter only (scripts still runs 3.7)
+          python-version: "3.8"  # Linter only (project scripts still runs 3.7)
 
       - name: Install dependencies
         run: |
